--- a/src/scss/components/_cart.scss
+++ b/src/scss/components/_cart.scss
@@ -8,14 +8,18 @@
   overflow: hidden;
   min-height: calc(100vh - 85px);
   position: relative;
+  right: 0;
 
   &__overlay {
     background-color: black;
     opacity: 33%;
     width: 100%;
     height: 100%;
-    position: fixed;
     overflow: hidden;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+
     @media screen and (max-width: u.rem(410)) {
       display: none !important;
     }
@@ -68,9 +72,12 @@
 
   &__totals-container {
     padding: u.rem(40);
+    @media screen and (max-width: u.rem(365)) {
+      padding: clamp(u.rem(15), 6vw, u.rem(40));
+    }
   }
 
-  &__total-container {
+  &__total-row {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -80,7 +87,7 @@
     }
   }
 
-  &__total-container:nth-child(4) {
+  &__total-row:nth-child(4) {
     font-size: u.rem(18);
     font-weight: 700;
   }
