--- a/src/scss/components/_singleProductPage.scss
+++ b/src/scss/components/_singleProductPage.scss
@@ -1,11 +1,11 @@
 @use "../utils/" as u;
 
 .single-product {
-  width: 100%;
   &__container {
     display: flex;
     flex-direction: column;
     width: 100%;
+    margin-top: u.rem(-30);
 
     h2 {
       margin-bottom: u.rem(5);
