--- a/src/scss/globals/_fonts.scss
+++ b/src/scss/globals/_fonts.scss
@@ -1,11 +1,8 @@
 @font-face {
   font-family: "Roboto";
-  src: url("../../assets/fonts/Roboto-Regular.ttf") format("ttf");
+  src: url("/fonts/Roboto-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
-  -webkit-font-smoothing: antialiased;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
 }
 
 body {
