--- a/src/scss/components/_cart.scss
+++ b/src/scss/components/_cart.scss
@@ -16,7 +16,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
 
